--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 hr {
-  margin-top: 25px;
-  margin-bottom: 30px;
+  margin-top: 0px;
+  margin-bottom: 15px;
   margin-left: auto;
   margin-right: auto;
   border: 2px dashed lightgrey;
@@ -21,6 +21,60 @@ img {
   margin-bottom: 20px
 }
 
+#btn {
+  width: 48vw;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 13px 40px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0px 2px;
+  cursor: pointer;
+  border-radius: 10px
+}
+
+#playerX {
+  background-color: white;
+  color: black;
+  border: 2px solid #375bcf;
+}
+
+#playerX:hover {
+  background-color: #375bcf;
+  color: white;
+}
+
+#reset {
+  background-color: #45cb25;
+  color: white;
+  border: 2px solid #45cb25;
+}
+
+#reset:hover {
+  background-color: #375bcf;
+  color: white;
+  border: 2px solid #375bcf;
+}
+
+#playerO {
+  background-color: white;
+  color: black;
+  border: 2px solid #45cb25;
+}
+
+#playerO:hover {
+  background-color: #45cb25;
+  color: white;
+}
+
 td {
   width: 8vw;
   height: 8vw;
@@ -30,31 +84,48 @@ td {
   padding: 10px;
   border-radius: 25px;
   box-shadow: 3px 3px 20px #828282;
+  position: relative;
 }
 
 table {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0;
+  margin-top: 15px;
   border-collapse: separate;
   border-spacing: 8px;
+  position: relative;
 }
 
-#btn {
-  margin: 0 40vw;
-
+#horizantalLine {
+  margin-top: 20px;
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 2px dashed lightgrey;
+  width: 28vw;
 }
 
-.button {
-  background-color: #45cb25;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 10px;
+/* ///////////// */
+.popup-overlay {
+  display: none;
   border-radius: 10px;
+  position: absolute;
+  left: 35vw;
+  top: 25vw;
+  z-index: 1;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 10vw;
+  width: 30vw;
+  cursor: pointer;
+  background-color: #FFAE00;
+}
 
+h3 {
+  font-family: helvetica;
+  color: white;
+  font-size: 30px;
+  text-align: center;
 }
