--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,18 @@ hr {
   width: 28vw;
 }
 
-img {
+#logo img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 32vw;
   margin-top: 2vw;
-  margin-bottom: 20px
+  margin-bottom: 20px;
+  border: 1px solid red;
 }
 
 #btn {
-  width: 48vw;
+  width: 80vw;
   margin: 0 auto;
   text-align: center;
 }
@@ -83,10 +84,13 @@ img {
 }
 
 td {
-  width: 8vw;
-  height: 8vw;
+  width: 15vh;
+  height: 15vh;
+  /* width: 8vw;
+  height: 8vw; */
   background-color: white;
-  font-size: 20px;
+  background-size: cover;
+  font-size: 20vh;
   text-align: center;
   padding: 10px;
   border-radius: 25px;
@@ -131,7 +135,7 @@ table {
   line-height: 10vw;
   width: 30vw;
   cursor: pointer;
-  background-color: #b21add;
+  background-color: rgba(120, 14, 173, 0.9);
 }
 
 h3 {
