Tic Tac Toe Final edition after First Debugging

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ hr {
   width: 32vw;
   margin-top: 2vw;
   margin-bottom: 20px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 #btn {
